--- a/src/index.ejs
+++ b/src/index.ejs
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
     <div class="profile">
-        <img src="./images/image.jpg" alt="Image">
+        <img src="<%= require('./images/image.jpg') %>" alt="Image">
         <h1>Html reloading</h1>
     </div>
 </body>
